--- a/elementTest/index.html
+++ b/elementTest/index.html
@@ -5,7 +5,7 @@
   <title>WebComponentDemo</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="./hello-button-element.js"></script>
+  <script src="hello-button-element.js"></script>
 </head>
 <body>
   <app-hello-button label="Click Me"></app-hello-button>
