--- a/elementTest/index.html
+++ b/elementTest/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>WebComponentDemo</title>
-  <base href="/">
+  <base href="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="hello-button-element.js"></script>
 </head>
 <body>
-  <app-hello-button label="Click Me"></app-hello-button>
+  <app-hello-button></app-hello-button>
 <script>
     const button = document.querySelector('app-hello-button');
     button.addEventListener('action', (event) => {
