--- a/elementTest/index.html
+++ b/elementTest/index.html
@@ -8,7 +8,7 @@
   <script src="hello-button-element.js"></script>
 </head>
 <body>
-  <app-hello-button></app-hello-button>
+  <app-hello-button label="Click Me"></app-hello-button>
 <script>
     const button = document.querySelector('app-hello-button');
     button.addEventListener('action', (event) => {
